fixed small screen navbar overlapping problem

--- a/portf-website/src/components/contactSection/contact.css
+++ b/portf-website/src/components/contactSection/contact.css
@@ -68,6 +68,7 @@ input,textarea{
 @media screen and (max-width:600px){
     .container.contact_container{
         /* grid-template-columns: 1fr; */
+        padding-bottom: 20%;
         width:var(--container-width-sm);
         /* gap: 2rem; */
     }
